--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header h1 {
 
 /* Welcome Section with Background Image */
 .welcome-background {
-  background-image: url('images/toadstool_welcom.jpeg');
+  background-image: url('toadstool_welcom.jpeg');
   background-size: cover;
   background-position: center;
   padding: 120px 20px;
@@ -107,7 +107,7 @@ footer {
 }
 
 .upload-background {
-  background-image: url('images/jasmine_flower.jpeg');
+  background-image: url('jasmine_flower.jpeg');
   background-size: cover;
   background-position: center;
   min-height: 100vh;
@@ -205,7 +205,7 @@ footer {
   background-color: #fbe5ea;
 }
 .gallery-background {
-  background-image: url('images/forest.jpeg');
+  background-image: url('forest.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
